dhall/tests/type-inference/failure/unit/MergeLhsNotRecord.txt
Type error: error: Merge1ArgMustBeRecord
 --> <current file>:1:1
  |
1 | merge True < x >.x
  | ^^^^^^^^^^^^^^^^^^ Merge1ArgMustBeRecord
  |
